--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,6 @@
 #Grails Metadata file
-#Tue Jan 15 15:44:26 EST 2013
-app.grails.version=2.1.0
+#Fri Feb 08 13:50:16 EST 2013
+app.grails.version=2.2.0
 app.name=restful-api
+plugins.hibernate=2.2.0
 plugins.inflector=0.2
