--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 #Grails Metadata file
-#Fri Feb 08 13:50:16 EST 2013
+#Thu May 09 12:02:43 EDT 2013
 app.grails.version=2.2.0
 app.name=restful-api
 plugins.hibernate=2.2.0
