--- a/test/test-restful-api/application.properties
+++ b/test/test-restful-api/application.properties
@@ -1,5 +1,5 @@
 #Grails Metadata file
-#Tue Jan 15 17:56:26 EST 2013
-app.grails.version=2.2.1
+#Fri May 23 14:14:29 PDT 2014
+app.grails.version=2.4.0
 app.name=test-restful-api
 app.version=0.1
