--- a/test/test-restful-api/application.properties
+++ b/test/test-restful-api/application.properties
@@ -1,5 +1,5 @@
 #Grails Metadata file
-#Tue Jan 15 17:56:26 EST 2013
-app.grails.version=2.2.1
+#Sun Jul 26 16:54:28 EDT 2015
+app.grails.version=2.5.0
 app.name=test-restful-api
 app.version=0.1
