--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,3 @@
 #Grails Metadata file
-#Thu Aug 29 17:38:32 EDT 2013
-app.grails.version=2.2.1
+#Tue Nov 03 15:14:50 EST 2015
+app.grails.version=2.5.2
