--- a/restful-api/build.gradle
+++ b/restful-api/build.gradle
@@ -63,7 +63,7 @@ dependencies {
 
     testCompile "org.grails:grails-plugin-testing"
 
-    runtime "org.grails.plugins:cache-headers:2.0.0-SNAPSHOT"
+    //runtime "org.grails.plugins:cache-headers:2.0.0-SNAPSHOT"
     compile "org.spockframework:spock-core:1.0-groovy-2.4"
 
     console "org.grails:grails-console"
