--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ jdk:
 before_script:
 - chmod +x grailsw test/test-restful-api/grailsw
 script: "./grailsw clean && ./grailsw refresh-dependencies && ./grailsw compile &&
-  cd test/test-restful-api && ./grailsw clean && ./grailsw compile && ./grailsw test-app"
-before_deploy: "test $TRAVIS_TEST_RESULT = 0 && ./grailsw package-plugin"
+  cd test/test-restful-api && ./grailsw clean && ./grailsw compile && ./grailsw test-app &&
+  cd ../.. && ./grailsw package-plugin"
 deploy:
   provider: releases
   api_key:
