--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: groovy
 jdk:
 - oraclejdk7
+branches:
+  only:
+  - copy-headers
 before_script:
 - chmod +x grailsw test/test-restful-api/grailsw
 script: "./grailsw clean && ./grailsw refresh-dependencies && ./grailsw compile &&
