--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,16 @@
 language: groovy
+cache:
+  directories:
+  - $HOME/.m2
+  - $HOME/.grails/ivy-cache
+  - $HOME/.grails/wrapper
 jdk:
 - oraclejdk7
 before_script:
 - chmod +x grailsw test/test-restful-api/grailsw
 script: "./grailsw clean && ./grailsw refresh-dependencies && ./grailsw compile &&
-  cd test/test-restful-api && ./grailsw clean && ./grailsw compile && ./grailsw test-app &&
-  cd ../.. && ./grailsw package-plugin"
+  cd test/test-restful-api && ./grailsw clean && ./grailsw refresh-dependencies &&
+  ./grailsw compile && ./grailsw test-app && cd ../.. && ./grailsw package-plugin"
 deploy:
   provider: releases
   api_key:
