--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,16 @@
-.DS_Store
-target
-target/**/*
-web-app/WEB-INF/classes
-web-app/WEB-INF/classes/**/*
-web-app/WEB-INF/tld/*.tld
-web-app/WEB-INF/tld/**/*
-*.log
-*.iws
-*.ipr
-.settings/org.eclipse.jdt.core.prefs
 *.iml
-.idea
-.idea/**/*
-out/
+*.ipr
+*.iws
+*.log
 *.sha1
-plugin.xml
 *en_PS.properties
-test/test-restful-api/web-app/css/**-rtl.css
-/plugin.xml
+.DS_Store
+.idea
+.settings/org.eclipse.jdt.core.prefs
 .vagrant
+out
+plugin.xml
+target
+test/test-restful-api/web-app/css/**-rtl.css
 Vagrantfile
+web-app
