--- a/test-restful-api/build.gradle
+++ b/test-restful-api/build.gradle
@@ -69,13 +69,14 @@ dependencies {
     runtime "org.grails.plugins:asset-pipeline"
 
     testCompile "org.grails:grails-plugin-testing"
-    testCompile "org.grails.plugins:geb"
+    testCompile "org.grails.plugins:geb:1.0.2"
 
 
     //compile files('https://bintray.com/dodysw/plugins/download_file?file_path=org%2Fgrails%2Fplugins%2Fcache-headers%2F1.1.9%2Fcache-headers-1.1.9-sources.jar')
     //runtime project(":cache-headers")
-    compile "org.grails.plugins:cache-headers:1.1.9"
+    //compile "org.grails.plugins:cache-headers:1.1.9"
     compile project(':restful-api')
+    compile "org.grails.plugins:cache-headers:3.0.0-SNAPSHOT"
 
     // Note: It is recommended to update to a more robust driver (Chrome, Firefox etc.)
     testRuntime 'org.seleniumhq.selenium:selenium-htmlunit-driver:2.44.0'
