--- a/restful-api/build.gradle
+++ b/restful-api/build.gradle
@@ -64,9 +64,8 @@ dependencies {
     compile "org.grails:grails-plugin-testing"
     compile "org.grails.plugins:geb:1.0.2"
 
-    //runtime "org.grails.plugins:cache-headers:2.0.0-SNAPSHOT"
+    compile "org.grails.plugins:cache-headers:2.0.2"
     compile "org.spockframework:spock-core:1.0-groovy-2.4"
-    compile "org.grails.plugins:cache-headers:3.0.0-SNAPSHOT"
     console "org.grails:grails-console"
 }
 
