--- a/test-restful-api/build.gradle
+++ b/test-restful-api/build.gradle
@@ -73,10 +73,8 @@ dependencies {
 
 
     //compile files('https://bintray.com/dodysw/plugins/download_file?file_path=org%2Fgrails%2Fplugins%2Fcache-headers%2F1.1.9%2Fcache-headers-1.1.9-sources.jar')
-    //runtime project(":cache-headers")
-    //compile "org.grails.plugins:cache-headers:1.1.9"
+    compile "org.grails.plugins:cache-headers:2.0.2"
     compile project(':restful-api')
-    compile "org.grails.plugins:cache-headers:3.0.0-SNAPSHOT"
 
     // Note: It is recommended to update to a more robust driver (Chrome, Firefox etc.)
     testRuntime 'org.seleniumhq.selenium:selenium-htmlunit-driver:2.44.0'
